Add player_count param to instances endpoint (#77)
