# open-api/openapi.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "RaidHub API",
     "description": "The Semi-public API for RaidHub",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "contact": {
       "name": "RaidHub Admin",
       "email": "admin@raidhub.io"
@@ -4090,6 +4090,36 @@
             },
             "required": false,
             "name": "flawless",
+            "in": "query"
+          },
+          {
+            "schema": {
+              "type": "integer",
+              "minimum": 0,
+              "exclusiveMinimum": true
+            },
+            "required": false,
+            "name": "playerCount",
+            "in": "query"
+          },
+          {
+            "schema": {
+              "type": "integer",
+              "minimum": 0,
+              "exclusiveMinimum": true
+            },
+            "required": false,
+            "name": "minPlayerCount",
+            "in": "query"
+          },
+          {
+            "schema": {
+              "type": "integer",
+              "minimum": 0,
+              "exclusiveMinimum": true
+            },
+            "required": false,
+            "name": "maxPlayerCount",
             "in": "query"
           },
           {
