# src/routes/player/membershipId/instances.ts
@@ -33,6 +33,9 @@ export const playerInstancesRoute = new RaidHubRoute({
         completed: zBoolString().optional(),
         fresh: zBoolString().optional(),
         flawless: zBoolString().optional(),
+        playerCount: zCoercedNaturalNumber().optional(),
+        minPlayerCount: zCoercedNaturalNumber().optional(),
+        maxPlayerCount: zCoercedNaturalNumber().optional(),
         minDurationSeconds: zCoercedWholeNumber().optional(),
         maxDurationSeconds: zCoercedWholeNumber().optional(),
         season: zCoercedNaturalNumber().optional(),
